fix weekends schedule layout

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -64,6 +64,72 @@
                     <div class="weekends-schedule-header">Παρασκευή 28 Σεπτεμβρίου</div>
                     <div class="weekends-schedule-content">
                         <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">5:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
+                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:00pm</div>
+                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                            <div class="weekends-schedule-content-item-text">Καλωσόρισμα και πρόγραμμα 3ημέρου</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:15pm</div>
+                            <div class="weekends-schedule-content-item-what">Παρουσίαση συμμετεχόντων</div>
+                            <div class="weekends-schedule-content-item-text">1’ ομιλία από το κάθε συμμετέχοντα</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:45pm</div>
+                            <div class="weekends-schedule-content-item-what">Θεματικές ομιλίες</div>
+                            <div class="weekends-schedule-content-item-text"></div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">7:15pm</div>
+                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδέων</div>
+                            <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Form Teams</div>
+                            <div class="weekends-schedule-content-item-text">Dinner</div>
+                        </div>
+                    </div>
+                    <div class="weekends-schedule-header">Σάββατο 29 Σεπτεμβρίου</div>
+                    <div class="weekends-schedule-content">
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
+                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                            <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
+                            <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
+                            <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Voting</div>
+                            <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                        </div>
+                        <div class="weekends-schedule-content-item">
+                            <div class="weekends-schedule-content-item-time">6:30pm</div>
+                            <div class="weekends-schedule-content-item-what">Form Teams</div>
+                            <div class="weekends-schedule-content-item-text">Dinner</div>
+                        </div>
+                    </div>
+                    <div class="weekends-schedule-header">Κυριακή 30 Σεπτεμβρίου</div>
+                    <div class="weekends-schedule-content">
+                        <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
                             <div class="weekends-schedule-content-item-what">Προσέλευση</div>
                             <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
