add friday's schedule content

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -81,17 +81,17 @@
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:45pm</div>
                             <div class="weekends-schedule-content-item-what">Θεματικές ομιλίες</div>
-                            <div class="weekends-schedule-content-item-text"></div>
+                            <div class="weekends-schedule-content-item-text">Παρουσιάσεις στον τομέα των μεταφορών</div>
                         </div>
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">7:15pm</div>
-                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδέων</div>
-                            <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδέων &amp; δημιουργία ομάδων</div>
+                            <div class="weekends-schedule-content-item-text">Περιγραφή λύσεων και στελέχωση</div>
                         </div>
                         <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Form Teams</div>
-                            <div class="weekends-schedule-content-item-text">Dinner</div>
+                            <div class="weekends-schedule-content-item-time">8:00pm</div>
+                            <div class="weekends-schedule-content-item-what">Ελαφρύ δείπνο</div>
+                            <div class="weekends-schedule-content-item-text">Πίτσα &amp; Μπύρα!</div>
                         </div>
                     </div>
                     <div class="weekends-schedule-header">Σάββατο 29 Σεπτεμβρίου</div>
