fix schedule accordion

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -19,11 +19,10 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <h1>Ξεκίνα τώρα</h1>
-                <div class="weekends-subtitle">15 - 17 Ιουνίου 2018</div>
+                <h1>Σαββατοκύριακο Αστικών Μεταφορών</h1>
+                <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018</div>
                 <div id="overview">
                     <p><strong>Έχετε μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές  που θέλετε να προωθήσετε ή ένα πρόβλημα που θέλετε να λύσετε, αλλά δεν ξέρετε από πού να ξεκινήσετε ή από ποιον να ξεκινήσετε;</strong></p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48457.26875562999!2d22.9594983!3d40.61710485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x82bc16c6e0e18389!2sOK*21Thess!5e0!3m2!1sen!2sgr!4v1528134327069" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσετε μια ομάδα, να δημιουργήσετε το πρωτότυπο της ιδέας σας, να επικυρώσετε την επιχειρηματική σας ιδέα και να λάβετε πληροφορίες από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων, όλα σε ένα Σαββατοκύριακο.</p>
 
                     <h4>Τι πρέπει να φέρετε</h4>
@@ -60,105 +59,112 @@
 
 
                 <div id="schedule">
-                    <h2>Schedule</h2>
-                    <div class="weekends-schedule-header">Παρασκευή 28 Σεπτεμβρίου</div>
-                    <div class="weekends-schedule-content">
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">5:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
-                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                    <h2>Πρόγραμμα</h2>
+                    <button class="accordion weekends-schedule-header" id="red">Παρασκευή 28 Σεπτεμβρίου</button>
+                     <div class="panel">
+                        <div class="panel-inner">
+                          <div class="weekends-schedule-content">
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">5:30πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Προσέλευση</div>
+                              </div>
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">6:00πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                              </div>
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">6:15πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Παρουσίαση συμμετεχόντων  <small> - 1’ ομιλία από το κάθε συμμετέχοντα</small></div>
+                              </div>
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">6:45πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Θεματικές ομιλίες στον τομέα των μεταφορών</div>
+                              </div>
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">7:15πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Παρουσίαση ιδέων &amp; δημιουργία ομάδων</div>
+                              </div>
+                              <div class="weekends-schedule-content-item">
+                                  <div class="weekends-schedule-content-item-time">8:00πμ</div>
+                                  <div class="weekends-schedule-content-item-what">Ελαφρύ δείπνο</div>
+                              </div>
+                          </div>
+
                         </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:00pm</div>
-                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
-                            <div class="weekends-schedule-content-item-text">Καλωσόρισμα και πρόγραμμα 3ημέρου</div>
+                     </div>
+                    <button class="accordion weekends-schedule-header" id="black">Σάββατο 29 Σεπτεμβρίου</button>
+                     <div class="panel">
+                       <div class="panel-inner">
+                        <div class="weekends-schedule-content">
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">9:30am</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωινό</div>
+                                <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                                <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
+                                <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
+                                <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Voting</div>
+                                <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Form Teams</div>
+                                <div class="weekends-schedule-content-item-text">Dinner</div>
+                            </div>
                         </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:15pm</div>
-                            <div class="weekends-schedule-content-item-what">Παρουσίαση συμμετεχόντων</div>
-                            <div class="weekends-schedule-content-item-text">1’ ομιλία από το κάθε συμμετέχοντα</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:45pm</div>
-                            <div class="weekends-schedule-content-item-what">Θεματικές ομιλίες</div>
-                            <div class="weekends-schedule-content-item-text">Παρουσιάσεις στον τομέα των μεταφορών</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">7:15pm</div>
-                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδέων &amp; δημιουργία ομάδων</div>
-                            <div class="weekends-schedule-content-item-text">Περιγραφή λύσεων και στελέχωση</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">8:00pm</div>
-                            <div class="weekends-schedule-content-item-what">Ελαφρύ δείπνο</div>
-                            <div class="weekends-schedule-content-item-text">Πίτσα &amp; Μπύρα!</div>
-                        </div>
+                      </div>
                     </div>
-                    <div class="weekends-schedule-header">Σάββατο 29 Σεπτεμβρίου</div>
-                    <div class="weekends-schedule-content">
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
-                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                    <button class="accordion weekends-schedule-header" id="blue">Κυριακή 30 Σεπτεμβρίου</button>
+                     <div class="panel">
+                       <div class="panel-inner">
+                        <div class="weekends-schedule-content">
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση</div>
+                                <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                                <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
+                                <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
+                                <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Voting</div>
+                                <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
+                            </div>
+                            <div class="weekends-schedule-content-item">
+                                <div class="weekends-schedule-content-item-time">6:30pm</div>
+                                <div class="weekends-schedule-content-item-what">Form Teams</div>
+                                <div class="weekends-schedule-content-item-text">Dinner</div>
+                            </div>
                         </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
-                            <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
-                            <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
-                            <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Voting</div>
-                            <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Form Teams</div>
-                            <div class="weekends-schedule-content-item-text">Dinner</div>
-                        </div>
-                    </div>
-                    <div class="weekends-schedule-header">Κυριακή 30 Σεπτεμβρίου</div>
-                    <div class="weekends-schedule-content">
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
-                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
-                            <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
-                            <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
-                            <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Voting</div>
-                            <div class="weekends-schedule-content-item-text">Mentoring (Appointments)</div>
-                        </div>
-                        <div class="weekends-schedule-content-item">
-                            <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Form Teams</div>
-                            <div class="weekends-schedule-content-item-text">Dinner</div>
-                        </div>
+                      </div>
                     </div>
                 </div>
                 <div id="judges">
@@ -230,6 +236,29 @@
                           },
                           false
                           );
+                      </script>
+                      <script>
+                          var accordionElems = document.getElementsByClassName('accordion');
+                          var i = 0;
+                          for (i = 0; i < accordionElems.length; i++) {
+                              accordionElems[i].onclick = function () {
+                                  this.classList.toggle('active');
+                                  var panel = this.nextElementSibling;
+                                  if (panel.style.maxHeight) {
+                                      panel.style.maxHeight = null;
+                                  } else {
+                                      panel.style.maxHeight = panel.scrollHeight + 'px';
+                                  }
+                              }
+                          }
+
+                          function openPanel() {
+                              var elemId = document.location.hash.slice(1);
+                              var hashElem = document.getElementById(elemId);
+                              hashElem.click();
+                          }
+                          window.addEventListener('hashchange', openPanel, false);
+                          openPanel();
                       </script>
                   </form>
                 </div>
