--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1353,10 +1353,35 @@ textarea {
 }
 
 .weekends-schedule-header {
-  background: #d82c20;
   padding: 17px 30px 15px;
+  font-weight: 400;
+}
+
+button.accordion#red{
+  background: #EE4031;
   color: #fff;
-  font-weight: 500;
+}
+
+button.accordion#red:after{
+  color: #fff;
+}
+
+button.accordion#black{
+  background: #231F20;
+  color: #fff;
+}
+
+button.accordion#black:after{
+  color: #fff;
+}
+
+button.accordion#blue{
+  background: #1c599b;
+  color: #fff;
+}
+
+button.accordion#blue:after{
+  color: #fff;
 }
 
 .weekends-schedule-content-item {
@@ -1376,12 +1401,12 @@ textarea {
 
 .weekends-schedule-content-item-what {
   display: flex;
-  width: 20%;
+  width: 75%;
   color: #4a4a4a;
 }
 
-.weekends-schedule-content-item-text {
+/*.weekends-schedule-content-item-text {
   display: flex;
   width: 55%;
   color: #767676;
-}
+}*/
