--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -42,11 +42,12 @@
                 </div>
                 <br>
                 <h2>Mentors</h2>
-
+                 <div class="weekends-mentor-container">
                     <div class="col-md-2 weekends-mentor">
-                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/jmsalanova.jpg">
                     </div>
                     <div class="col-md-10">
+                      <h3>Josep Maria Salanova</h3>
                       <p class="weekends-mentor-bio small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
                       Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
                       (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
@@ -56,8 +57,53 @@
                       εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
                       Science και το Big Data στις μεταφορές.</p>
                     </div>
-
-
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ssalem.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Σάμουελ Αλέξιος Σαλέμ</h3>
+                      <p class="weekends-mentor-bio small">Ο Σάμουελ Αλέξιος Σαλέμ είναι Πολιτικός Μηχανικός - Συγκοινωνιολόγος ειδικευμένος σε συγκοινωνιακά και περιβαλλοντικά θέματα. Οι τομείς με τους οποίους ασχολείται είναι του
+                      στρατηγικού σχεδιασμού, της ανάλυσης δεδομένων και των περιβαλλοντικών επιπτώσεων συγκοινωνιακών έργων. Απέκτησε το πτυχίο του πολιτικού μηχανικού στο Α.Π.Θ. (2002)
+                      ενώ έχει και δύο μεταπτυχιακά, ένα στην προστασία περιβάλλοντος και τη βιώσιμη ανάπτυξη από το Α.Π.Θ. και ένα στα συγκοινωνιακά από το πανεπιστήμιο του
+                      Southampton, UK. Έχει δουλέψει τρία χρόνια στο Ηνωμένο Βασίλειο (2006-2009) σε κοινοπραξία εταιριών συμβούλων μηχανικών (MottGifford) που είχε το συμβόλαιο για την
+                      παροχή υπηρεσιών συμβούλου στρατηγικού και επιχειρησιακού σχεδιασμού κυκλοφοριακών έργων στην κομητεία του Hampshire. Την τριετία 2009-2012 εργάσθηκε
+                      σαν ειδικός συνεργάτης – σύμβουλος σε περιβαλλοντικά και συγκοινωνιακά θέματα για το Δήμο Βέροιας. Έχει εργασθεί σε πληθώρα Ευρωπαϊκών έργων από το 7 ο πλαίσιο στήριξης
+                      και έπειτα (NODES, T-TRANS, RAIL4SEE, FLOW, SUMPS-UP) ενώ έχει κατά καιρούς συνεργασθεί με το Ινστιτούτο Μεταφορών (ΙΜΕΤ) και το ΤΕΙ Θεσσαλίας ως εξωτερικός
+                      συνεργάτης σε εθνικά, περιφερειακά και ευρωπαϊκά προγράμματα. Από το 2013 εργάζεται για το πρώην Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ) νυν Οργανισμού
+                      Συγκοινωνιακού Έργου Θεσσαλονίκης που είναι επιφορτισμένος με τη σχεδιασμό και την εποπτεία λειτουργίας των Δημοσίων Συγκοινωνιών στην Μητροπολιτική Περιφέρεια
+                      Θεσσαλονίκης παρέχοντας υπηρεσίες συγκοινωνιολόγου μηχανικού</p>
+                    </div>
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Χρύσα Βίζμπα</h3>
+                      <p class="weekends-mentor-bio small">H κα. Χρύσα Βίζμπα είναι Τοπογράφος Μηχανικός – Συγκοινωνιολόγος με εξειδίκευση σε συγκοινωνιακά και περιβαλλοντικά ζητήματα. Οι βασικοί τομείς ενασχόλησής της είναι ο
+                      στρατηγικός σχεδιασμός και η ανάλυση δεδομένων συγκοινωνιακών έργων και συστημάτων μεταφορών. Έχει πτυχίο Αγρονόμου –Τοπογράφου Μηχανικού (2007) και δύο
+                      μεταπτυχιακούς τίτλους σπουδών, στην προστασία περιβάλλοντος και βιώσιμη ανάπτυξη (2008) και στο σχεδιασμό συστημάτων μεταφορών (2009). Εργάστηκε σε εταιρίες
+                      συμβούλων από το 2007 ενώ από το 2010 εργαζόταν στο Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ), νυν Οργανισμός Συγκοινωνιακού Έργου Θεσσαλονίκης (ΟΣΕΘ).
+                      Εξειδικεύεται σε θέματα βιώσιμης αστικής κινητικότητας, σχεδιασμό και εποπτεία δημόσιων συγκοινωνιακών συστημάτων μεταφορών, έξυπνα συστήματα μεταφορών,
+                      έρευνες και ανάλυση δεδομένων, μέσα σταθερής τροχιάς, ποιότητα δημοσίων μεταφορών. Έχει επίσης εργαστεί σε πληθώρα συγχρηματοδοτούμενων και μη εθνικών και ευρωπαϊκών
+                      έργων και προγραμμάτων (EPTA, ECOTALE, ATTAC, SUMPs- Up, SUNRISE, CIVITAS κα).</p>
+                    </div>
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/emanos.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Ευστράτιος Μάνος</h3>
+                      <p class="weekends-mentor-bio small">Αρχιτέκτων - Πολεοδόμος, MSc Περιβαλλοντικού Σχεδιασμού, εμπειρογνώμονας σε θέματα Ολοκληρωμένης Αστικής Ανάπτυξης και χρηματοοικονομικής μηχανικής για την Αστική Ανάπτυξη,
+                      την Χωρική Ανάπτυξη και την Ευρωπαϊκή Εδαφική Συνεργασία. Αποτελεί ιδρυτικό μέλος του Κοινωνικού Καταναλωτικού Συνεταιρισμού BIOSCOOP στην Θεσσαλονίκη και μέλος του Εποπτικού του Συμβουλίου. Ως μέλος της Μόνιμης
+                      Επιτροπής Ανταγωνιστικότητας, Επιχειρηματικότητας και Καινοτομίας του ΤΕΕ, τμήμα Κεντρικής Μακεδονίας, προωθεί την νέα και καινοτόμα επιχειρηματικότητα, η οποία κυρίως λαμβάνει χώρα σε αστικά περιβάλλοντα.
+                      Ως Πιστοποιημένος Ενεργειακός Επιθεωρητής, ενδιαφέρεται για την προώθηση της εξοικονόμησης ενέργειας και των ΑΠΕ. Είναι Πιστοποιημένος Εκπαιδευτής Ενηλίκων στο Εθνικό Κέντρο Δημόσιας Διοίκησης και Αυτοδιοίκησης (ΕΚΔΔΑ),
+                      σε θέματα Πολιτικής Συνοχής της Ευρωπαϊκής Ένωσης, Επιχειρησιακού Σχεδιασμού και Αστικής Ανάπτυξης.</p>
+                    </div>
+                </div>
                 <div id="schedule">
                     <h2>Πρόγραμμα</h2>
                     <button class="accordion weekends-schedule-header" id="red">Παρασκευή 28 Σεπτεμβρίου</button>
@@ -237,33 +283,32 @@
                           false
                           );
                       </script>
-                      <script>
-                          var accordionElems = document.getElementsByClassName('accordion');
-                          var i = 0;
-                          for (i = 0; i < accordionElems.length; i++) {
-                              accordionElems[i].onclick = function () {
-                                  this.classList.toggle('active');
-                                  var panel = this.nextElementSibling;
-                                  if (panel.style.maxHeight) {
-                                      panel.style.maxHeight = null;
-                                  } else {
-                                      panel.style.maxHeight = panel.scrollHeight + 'px';
-                                  }
-                              }
-                          }
-
-                          function openPanel() {
-                              var elemId = document.location.hash.slice(1);
-                              var hashElem = document.getElementById(elemId);
-                              hashElem.click();
-                          }
-                          window.addEventListener('hashchange', openPanel, false);
-                          openPanel();
-                      </script>
                   </form>
                 </div>
             </div>
+            <script>
+                var accordionElems = document.getElementsByClassName('accordion');
+                var i = 0;
+                for (i = 0; i < accordionElems.length; i++) {
+                    accordionElems[i].onclick = function () {
+                        this.classList.toggle('active');
+                        var panel = this.nextElementSibling;
+                        if (panel.style.maxHeight) {
+                            panel.style.maxHeight = null;
+                        } else {
+                            panel.style.maxHeight = panel.scrollHeight + 'px';
+                        }
+                    }
+                }
 
+                function openPanel() {
+                    var elemId = document.location.hash.slice(1);
+                    var hashElem = document.getElementById(elemId);
+                    hashElem.click();
+                }
+                window.addEventListener('hashchange', openPanel, false);
+                openPanel();
+            </script>
         </div>
     </div>
 {% endblock %}
